[gd_scene load_steps=4 format=3 uid="uid://vfj60vmr2oyq"]

[ext_resource type="Script" path="res://Scripts/draggable_object.gd" id="1_hb0yw"]
[ext_resource type="Texture2D" uid="uid://viqpeetiplcu" path="res://Images/PoisonIvyJar.jpg" id="2_o7er0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvkjh"]
size = Vector2(128, 128)

[node name="DraggableObject" type="Node2D"]
script = ExtResource("1_hb0yw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.455, 0.455)
texture = ExtResource("2_o7er0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_lvkjh")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
